--- a/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
@@ -57,15 +57,15 @@
     </div>
 {% else %}
     <table class="table table-hover">
-        <tbody>
         <thead>
         <tr>
             <th class="text-left" style="width: 80%">Description</th>
             <th class="text-center" style="width: 20%">Modifier/Supprimer</th>
         </tr>
         </thead>
+        <tbody id="tutoring-resources-list" class="list-sortable" data-url="{{ path('objective_course_sort_tutoring_resources', {'id': courseInfo.id}) }}">
         {% for tutoringResources in courseInfo.courseTutoringResources %}
-            <tr class="text-center">
+            <tr class="item-sortable text-center" data-id="{{ tutoringResources.id }}">
                 <td class="text-left">{{ tutoringResources.description }}</td>
                 <td class="text-center">
                     <button type="button"
@@ -93,5 +93,10 @@
         $('#assistTutoring').show();
     } else {
         $('#assistTutoring').hide();
+    }
+
+    if ($('#tutoring-resources-list').length)
+    {
+        Syllabus.sortable($('#tutoring-resources-list'));
     }
 </script>
