--- a/app/Resources/views/course_info/admin/import_mcc.html.twig
+++ b/app/Resources/views/course_info/admin/import_mcc.html.twig
@@ -24,7 +24,9 @@
             </div>
             {{ form_end(form) }}
 
-            {{ report_render(report) }}
+            {{ report_render(parsingCsvReport) }}
+
+            {{ report_render(validationReport) }}
 
         </div>
     </div>
