Users import csv

--- a/app/Resources/views/import/_fields_allowed.html.twig
+++ b/app/Resources/views/import/_fields_allowed.html.twig
@@ -8,7 +8,7 @@
     </tr>
     </thead>
     <tbody>
-    {% for field in courseInfoFieldsAllowed %}
+    {% for field in fieldsAllowed %}
         <tr>
             <td>{{ field.name }}</td>
             <td>{{ field.required|humanizeBoolean }}</td>
