--- a/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
@@ -106,6 +106,7 @@
         <button type="button"
                 class="btn btn-light modal-action"
                 data-action-title="Demander un avis sur le syllabus"
+                data-action-url="{{ path('course_dashboard_askAdvice', {'id': courseInfo.id }) }}">
             <i class="fas fa-comment-dots"></i> Demander un avis (ingénieur pédagogique)
         </button>
         <button type="button" class="btn btn-light">Donner un avis sur la plateforme</button>
