--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -247,7 +247,7 @@
         <li class="nav-item">
             <a href="{{ path('app_admin_ask_advice_index') }}"
                class="nav-link {{ printActiveAdminSidebarLink(['app_admin_ask_advice_index']) }}">
-                <i class="nav-icon fas fa-copy"></i>
+                <i class="nav-icon  fas fa-comment-dots"></i>
                 <p>
                     Demande d'avis
                 </p>
