--- a/app/Resources/views/course_info/presentation/view/general.html.twig
+++ b/app/Resources/views/course_info/presentation/view/general.html.twig
@@ -2,15 +2,13 @@
     <div class="col-md-6">
         <dl>
             <dt>Domaine</dt>
-            {% if courseInfo.domains is not empty %}
-                <dd class="mb-0">
-                    {% for domain in courseInfo.domains %}
-                        {{ not loop.first ? ',' }} {{ domain.label }}
-                    {% endfor %}
-                </dd>
-            {% else %}
-                <dd>Non renseigné</dd>
-            {% endif %}
+            <dd class="mandatory-data">
+                {% set domains = null %}
+                {% for domain in courseInfo.domains %}
+                    {%  set domains = domains ~ (not loop.first) ? ',' ~ domain.label %}
+                {% endfor %}
+                {{ domains|humanizeEmptyData() }}
+            </dd>
         </dl>
         <dl>
             <dt>{{ 'app.presentation.view.general.level' | trans }}</dt>
