--- a/app/Resources/views/course_info/presentation/view/general.html.twig
+++ b/app/Resources/views/course_info/presentation/view/general.html.twig
@@ -70,8 +70,8 @@
         {% endif %}
 
     </div>
-    <div class="col-md-6" style="min-height: 150px;">
-        {% if courseInfo.summary is not empty %}
+    <div class="col-md-6 mandatory-data" style="min-height: 150px;">
+
             {{ courseInfo.summary|purify }}
         {% else %}
             <div class="h-100 d-flex align-items-center justify-content-center">
