--- a/app/Resources/views/form/groups_field.html.twig
+++ b/app/Resources/views/form/groups_field.html.twig
@@ -1,5 +1,7 @@
+{#
 {%- block choice_widget_expanded -%}
     <div {{ block('widget_container_attributes') }}>
+        {{ dump(form) }}
         {% for name, choices in form.vars.choices %}
             {% if choices is iterable  %}
 
@@ -24,3 +26,37 @@
         {% endfor %}
     </div>
 {%- endblock choice_widget_expanded -%}
+#}
+
+
+{% macro print_roles_hierarchy(form, choices, parent) %}
+    {% set parentId = (parent.vars is defined) ? parent.vars.id : '' %}
+    <ul class="ml-3 pl-0" style="list-style: none;" data-parent="{{ parentId }}">
+    {% for key, value in choices %}
+        <li>
+        {% if value is iterable  %}
+            {% set id = findChoiceIdByLabel(key, form.vars.choices) %}
+            {{ _self.print_role(form, id) }}
+            {{ _self.print_roles_hierarchy(form, value, form[id]) }}
+        {% else %}
+            {% set id = findChoiceIdByLabel(value, form.vars.choices) %}
+            {{ _self.print_role(form, id) }}
+        {% endif %}
+        </li>
+    {% endfor %}
+    </ul>
+{% endmacro %}
+
+{% macro print_role(form, id) %}
+    {% if id is not empty %}
+        {{ form_widget(form[id]) }}
+        {{ form_label(form[id]) }}
+    {% endif %}
+{% endmacro %}
+
+{% block _groups_roles_row %}
+    <label>{{ form.vars.label|trans }}</label>
+    <div class="form-group border p-2" id="groups_roles">
+        {{ _self.print_roles_hierarchy(form, constant('AppBundle\\Constant\\UserRole::HIERARCHY')) }}
+    </div>
+{% endblock %}
