--- a/app/Resources/views/groups/_form.html.twig
+++ b/app/Resources/views/groups/_form.html.twig
@@ -2,12 +2,13 @@
 
 {{ form_start(form) }}
     {{ form_row(form.label) }}
+    {{ form_row(form.roles) }}
     {% if form.obsolete is defined %}
-        <div class="custom-control custom-switch">
+        <div class="form-group custom-control custom-switch">
             {{ form_widget(form.obsolete) }}
             {{ form_label(form.obsolete) }}
         </div>
     {% endif %}
-    {{ form_row(form.roles) }}
+
     <button class="btn btn-primary">Enregistrer</button>
 {{ form_end(form) }}
