--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -12,7 +12,19 @@
     {% endfor %}
 {% endmacro %}
 <nav class="mt-2">
-
+    <nav class="mt-2">
+        <ul class="nav nav-pills nav-sidebar flex-column user-panel" data-widget="treeview" role="menu"
+            data-accordion="false">
+            <li class="nav-item has-treeview">
+                <a class="nav-link menu-tab"
+                   href="{{ path('app_admin.dashboard_index') }}"
+                   id="menu-dashboard">
+                    <i class="nav-icon fas fa-th"></i>
+                    <p>Tableau de bord</p>
+                </a>
+            </li>
+        </ul>
+    </nav>
     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
         <li class="nav-item">
@@ -243,18 +255,6 @@
                 </li>
             </ul>
         </li>
-
-        <li class="nav-item">
-            <a href="{{ path('app_admin_ask_advice_index') }}"
-               class="nav-link {{ printActiveAdminSidebarLink(['app_admin_ask_advice_index']) }}">
-                <i class="nav-icon  fas fa-comment-dots"></i>
-                <p>
-                    Demande d'avis
-                </p>
-            </a>
-        </li>
-
-
         <li class="nav-item">
             <a href="{{ path('app_admin_course_info_field_index') }}"
                class="nav-link {{ printActiveAdminSidebarLink(['app_admin_course_info_field_index']) }}">
