Secure routes /admin/activity/*

--- a/app/Resources/views/activity/index.html.twig
+++ b/app/Resources/views/activity/index.html.twig
@@ -5,22 +5,22 @@
     <div class="card">
         <div class="card-header">
             {{ form_start(form) }}
-                <div class="row ui-front">
-                    <div class="col-md-2">
-                        {{ form_row(form.label) }}
-                    </div>
-                    <div class="col-md-2">
-                        {{ form_label(form.activityTypes.label, 'app.form.activity.label.activityTypes'|trans) }}
-                        {{ form_widget(form.activityTypes.label) }}
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_activity_index')  }}">Réinitialiser les filtres</a>
-                    </div>
-                        <div class="offset-md-2"></div>
-                    <div class="col-md-3 col-sm-6">
-                        <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_activity_new')  }}">Ajouter une activité</a>
-                    </div>
+            <div class="row ui-front">
+                <div class="col-md-2">
+                    {{ form_row(form.label) }}
                 </div>
+                <div class="col-md-2">
+                    {{ form_label(form.activityTypes.label, 'app.form.activity.label.activityTypes'|trans) }}
+                    {{ form_widget(form.activityTypes.label) }}
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_activity_index')  }}">Réinitialiser les filtres</a>
+                </div>
+                <div class="offset-md-2"></div>
+                <div class="col-md-3 col-sm-6 text-right">
+                    {% include 'action/_activity_create.html.twig' %}
+                </div>
+            </div>
             <input type="submit" style="position: absolute; left: -9999px"/>
             {{ form_end(form) }}
         </div>
@@ -39,7 +39,11 @@
                     {% for activity in pagination %}
                         <tr>
                             <td>
-                                <a href="{{ path('app_admin_activity_edit', { 'id' : activity.id }) }}">{{ activity.label }}</a>
+                                {% if is_granted('ROLE_ADMIN_ACTIVITY_UPDATE') %}
+                                    <a href="{{ path('app_admin_activity_edit', { 'id' : activity.id }) }}">{{ activity.label }}</a>
+                                {% else %}
+                                    {{ activity.label }}
+                                {% endif %}
                             </td>
                             <td>
                                 {% for activityType in activity.activityTypes %}
