--- a/app/Resources/views/year/index.html.twig
+++ b/app/Resources/views/year/index.html.twig
@@ -4,7 +4,7 @@
 
     <div class="card">
         <div class="card-header">
-            {% include 'year/action/create.html.twig' %}
+            {% include 'action/_year_create.html.twig' %}
         </div>
         <!-- /.card-header -->
         <div class="card-body">
